feat: register shop
