# openapi/_index.yaml
@@ -20,6 +20,8 @@ tags:
       description: Xác minh và xác thực
     - name: users
       description: Người dùng
+    - name: shop
+      description: Cửa hàng
 paths:
 #   AUTH ROUTES
     /auth/login:
@@ -46,7 +48,18 @@ paths:
 #   USERS ROUTES
     /users/profile:
         $ref: "./resources/users/profile.yaml"
+    /users/profile/all:
+        $ref: "./resources/users/profile_all.yaml"
+    /users/profile/:user_id:
+        $ref: "./resources/users/profile_user_id.yaml"
+    /users/update-profile:
+        $ref: "./resources/users/update_profile.yaml"
+    /users/upload-avatar:
+        $ref: "./resources/users/upload_avatar.yaml"
 
+#   SHOPS ROUTES
+    /shops/register:
+        $ref: "./resources/shops/register.yaml"
 
 components:
     # parameters:
